--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,13 @@
     "cloudinary": "^1.9.1",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "jwt-simple": "^0.5.1",
     "mongoose": "^4.13.4",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^3.0.1"
   }
 }
