--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "form-data": "^2.3.1",
     "moment": "^2.19.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
