--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.17.1",
     "form-data": "^2.3.1",
     "moment": "^2.19.2",
+    "pug": "^2.0.0-rc.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
