--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,8 @@
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
-    "passport-jwt": "^3.0.1"
+    "passport-jwt": "^3.0.1",
+    "path": "^0.12.7",
+    "serve-static": "^1.13.1"
   }
 }
