--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Backend",
-            "program": "${workspaceFolder}/server/src/app.js"
+            "program": "${workspaceFolder}/src/app.js"
         }
     ]
 }
