--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cloudinary": "^1.9.1",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "heroku-ssl-redirect": "0.0.4",
     "jwt-simple": "^0.5.1",
     "mongoose": "^4.13.4",
     "morgan": "^1.9.0",
