--- a/package.json
+++ b/package.json
@@ -1,31 +1,106 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "Server side of ALF Israel website",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "name": "vue-ssr-starter-kit",
+  "version": "0.0.0",
+  "description": "A Vue.js project wuth vue 2.0, vue-router and vuex for server side rendering.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/doabit/vue-ssr-starter-kit.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "vue",
+    "vuex",
+    "vue-router",
+    "webpack",
+    "starter",
+    "server-side",
+    "boilerplate"
+  ],
+  "author": "doabit <doinsist@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/doabit/vue-ssr-starter-kit/issues"
+  },
+  "homepage": "https://github.com/doabit/vue-ssr-starter-kit#readme",
+  "scripts": {
+    "start": "cross-env NODE_ENV=production node server",
+    "dev": "node server",
+    "build:client": "cross-env NODE_ENV=production webpack --config ./build/webpack.client.config.js --progress --hide-modules",
+    "build:server": "cross-env NODE_ENV=production webpack --config ./build/webpack.server.config.js --progress --hide-modules",
+    "build": "rimraf dist && npm run build:client && npm run build:server",
+    "unit": "karma start ./test/unit/karma.conf.js --single-run"
+  },
   "dependencies": {
-    "bcrypt": "^1.0.3",
-    "body-parser": "^1.18.2",
-    "cloudinary": "^1.9.1",
-    "cors": "^2.8.4",
-    "express": "^4.16.2",
+    "axios": "^0.17.1",
+    "bcrypt": ">=1.0.3",
+    "body-parser": ">=1.18.2",
+    "cloudinary": ">=1.9.1",
+    "cors": ">=2.8.4",
+    "cross-env": "^5.1.3",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^6.0.0",
+    "express": ">=4.14.0",
+    "form-data": ">=2.3.1",
     "heroku-ssl-redirect": "0.0.4",
-    "jwt-simple": "^0.5.1",
-    "mongoose": "^4.13.4",
-    "morgan": "^1.9.0",
-    "multer": "^1.3.0",
-    "nodemon": "^1.12.1",
-    "passport": "^0.4.0",
-    "passport-http-bearer": "^1.0.1",
-    "passport-jwt": "^3.0.1",
-    "path": "^0.12.7",
-    "serve-static": "^1.13.1"
+    "jwt-simple": ">=0.5.1",
+    "lru-cache": ">=4.0.1",
+    "moment": ">=2.19.2",
+    "mongoose": "^5.0.4",
+    "multer": ">=1.3.0",
+    "passport": ">=0.4.0",
+    "passport-http-bearer": ">=1.0.1",
+    "passport-jwt": ">=3.0.1",
+    "pug": ">=2.0.0-rc.4",
+    "scss-loader": "0.0.1",
+    "serialize-javascript": ">=1.3.0",
+    "transform-runtime": "0.0.0",
+    "vue": ">=2.3.4",
+    "vue-meta": ">=1.4.3",
+    "vue-router": "^3.0.1",
+    "vue-server-renderer": ">=2.3.4",
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0"
+  },
+  "devDependencies": {
+    "babel-core": ">=6.13.2",
+    "babel-eslint": "^8.2.1",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-runtime": ">=6.23.0",
+    "babel-preset-es2015": ">=6.13.2",
+    "babel-preset-stage-0": ">=6.24.1",
+    "babel-preset-stage-2": ">=6.13.0",
+    "chai": "^4.1.2",
+    "css-loader": "^0.28.9",
+    "eslint": "^4.17.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": ">=1.5.0",
+    "eslint-plugin-html": "^4.0.2",
+    "eslint-plugin-promise": ">=3.3.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.6",
+    "html-webpack-plugin": ">=2.28.0",
+    "karma": "^2.0.0",
+    "karma-mocha": ">=1.1.1",
+    "karma-phantomjs-launcher": ">=1.0.1",
+    "karma-sinon-chai": ">=1.2.3",
+    "karma-sourcemap-loader": ">=0.3.7",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": ">=2.0.2",
+    "mocha": "^5.0.0",
+    "phantomjs-prebuilt": ">=2.1.10",
+    "rimraf": ">=2.6.0",
+    "sinon": "^5.0.0",
+    "sinon-chai": ">=2.8.0",
+    "stylus": ">=0.54.5",
+    "stylus-loader": "^3.0.1",
+    "sw-precache-webpack-plugin": "^0.11.4",
+    "vue-loader": "^14.1.1",
+    "vue-ssr-webpack-plugin": "^3.0.0",
+    "vue-template-compiler": ">=2.0.0",
+    "webpack": "^3.11.0",
+    "webpack-dev-middleware": "^2.0.5",
+    "webpack-hot-middleware": ">=2.12.2",
+    "webpack-merge": ">=4.1.0"
   }
 }
