--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pug": ">=2.0.0-rc.4",
     "scss-loader": "0.0.1",
     "serialize-javascript": ">=1.3.0",
+    "sitemap": "^1.13.0",
     "transform-runtime": "0.0.0",
     "vue": ">=2.3.4",
     "vue-meta": ">=1.4.3",
