--- a/package.json
+++ b/package.json
@@ -16,29 +16,31 @@
     "axios": "^0.17.1",
     "bcrypt": ">=1.0.3",
     "body-parser": ">=1.18.2",
-    "cloudinary": ">=1.9.1",
+    "cloudinary": "^1.10.0",
     "cors": ">=2.8.4",
     "cross-env": "^5.1.3",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^6.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-node": "^6.0.1",
     "express": ">=4.14.0",
-    "form-data": ">=2.3.1",
+    "form-data": "^2.3.2",
     "heroku-ssl-redirect": "0.0.4",
     "jwt-simple": ">=0.5.1",
     "lru-cache": ">=4.0.1",
-    "moment": ">=2.19.2",
-    "mongoose": "^5.0.4",
+    "moment": "^2.21.0",
+    "mongoose": "^5.0.8",
     "multer": ">=1.3.0",
     "passport": ">=0.4.0",
     "passport-http-bearer": ">=1.0.1",
     "passport-jwt": ">=3.0.1",
     "pug": ">=2.0.0-rc.4",
+    "quill": "^1.3.5",
     "scss-loader": "0.0.1",
     "serialize-javascript": ">=1.3.0",
     "sitemap": "^1.13.0",
     "transform-runtime": "0.0.0",
     "vue": ">=2.3.4",
     "vue-meta": ">=1.4.3",
+    "vue-quill-editor": "^3.0.5",
     "vue-router": "^3.0.1",
     "vue-server-renderer": ">=2.3.4",
     "vuex": "^3.0.1",
@@ -46,45 +48,45 @@
   },
   "devDependencies": {
     "babel-core": ">=6.13.2",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.3",
     "babel-plugin-transform-runtime": ">=6.23.0",
     "babel-preset-es2015": ">=6.13.2",
     "babel-preset-stage-0": ">=6.24.1",
     "babel-preset-stage-2": ">=6.13.0",
     "chai": "^4.1.2",
-    "css-loader": "^0.28.9",
-    "eslint": "^4.17.0",
+    "css-loader": "^0.28.10",
+    "eslint": "^4.18.2",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": ">=1.5.0",
+    "eslint-loader": "^2.0.0",
     "eslint-plugin-html": "^4.0.2",
     "eslint-plugin-promise": ">=3.3.0",
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
-    "html-webpack-plugin": ">=2.28.0",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.0.4",
     "karma": "^2.0.0",
     "karma-mocha": ">=1.1.1",
     "karma-phantomjs-launcher": ">=1.0.1",
     "karma-sinon-chai": ">=1.2.3",
     "karma-sourcemap-loader": ">=0.3.7",
     "karma-spec-reporter": "0.0.26",
-    "karma-webpack": ">=2.0.2",
-    "mocha": "^5.0.0",
+    "karma-webpack": "^2.0.13",
+    "mocha": "^5.0.1",
     "phantomjs-prebuilt": ">=2.1.10",
     "rimraf": ">=2.6.0",
     "sinon": "^5.0.0",
     "sinon-chai": ">=2.8.0",
     "stylus": ">=0.54.5",
-    "stylus-loader": "^3.0.1",
+    "stylus-loader": "^3.0.2",
     "sw-precache-webpack-plugin": "^0.11.4",
     "vue-loader": "^14.1.1",
     "vue-ssr-webpack-plugin": "^3.0.0",
     "vue-template-compiler": ">=2.0.0",
     "webpack": "^3.11.0",
-    "webpack-dev-middleware": "^2.0.5",
-    "webpack-hot-middleware": ">=2.12.2",
-    "webpack-merge": ">=4.1.0"
+    "webpack-dev-middleware": "^2.0.6",
+    "webpack-hot-middleware": "^2.21.1",
+    "webpack-merge": "^4.1.2"
   }
 }
