david`s mom is a good woman. david is a cunt though. quill is done. ssr with no ssr and with our good friend mochamad. todo: add quill to edit article page as well.

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "transform-runtime": "0.0.0",
     "vue": ">=2.3.4",
     "vue-meta": ">=1.4.3",
+    "vue-no-ssr": "^0.2.2",
     "vue-quill-editor": "^3.0.5",
     "vue-router": "^3.0.1",
     "vue-server-renderer": ">=2.3.4",
