--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "scss-loader": "0.0.1",
     "serialize-javascript": ">=1.3.0",
     "sitemap": "^1.13.0",
+    "swiper": "^4.1.6",
     "transform-runtime": "0.0.0",
     "vue": ">=2.3.4",
     "vue-meta": ">=1.4.3",
