Chnaged everything ALF - related to TotalLiberationIsrael

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "alf-israel-ssr",
   "version": "0.0.1",
-  "description": "Official ALF Israel website",
+  "description": "Official Total Liberation Israel website",
   "author": "Andrey Galchevski <andreygalchevskit@gmail.com>",
   "license": "MIT",
   "scripts": {
