--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build:client": "cross-env NODE_ENV=production webpack --config ./build/webpack.client.config.js --progress --hide-modules",
     "build:server": "cross-env NODE_ENV=production webpack --config ./build/webpack.server.config.js --progress --hide-modules",
     "build": "rimraf dist && npm run build:client && npm run build:server",
-    "unit": "karma start ./test/unit/karma.conf.js --single-run"
+    "unit": "karma start ./test/unit/karma.conf.js --single-run",
+    "lint": "eslint --ext .js,.vue src",
+    "lintfix": "eslint --ext .js,.vue src --fix"
   },
   "dependencies": {
     "axios": "^0.17.1",
@@ -20,7 +22,6 @@
     "cors": ">=2.8.4",
     "cross-env": "^5.1.3",
     "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-node": "^6.0.1",
     "express": ">=4.14.0",
     "form-data": "^2.3.2",
     "heroku-ssl-redirect": "0.0.4",
@@ -58,13 +59,15 @@
     "babel-preset-stage-2": ">=6.13.0",
     "chai": "^4.1.2",
     "css-loader": "^0.28.10",
-    "eslint": "^4.18.2",
+    "eslint": "^4.19.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-html": "^4.0.2",
+    "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": ">=3.3.0",
     "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^4.4.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.0.4",
